<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="post_description">Post Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="post">Post</string>
    <string name="image_post">image post</string>
    <string name="make_a_post">Make a Post</string>
    <string name="post_image">post image</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="parstagram">Parstagram</string>
    <string name="dummy_like">dummy like</string>
    <string name="dummy_comment">dummy comment</string>
    <string name="dummy_direct">dummy direct</string>
    <string name="dummy_more">dummy more</string>
</resources>