<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/postView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:text="mervyn"
        tools:ignore="RelativeOverlap" />
    <ImageView
        android:id="@+id/imageViewMore"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_above="@+id/imageViewPostPicture"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="1dp"
        app:srcCompat="@drawable/ufi_more"
        android:contentDescription="@string/dummy_more" />
    <ImageView
        android:id="@+id/imageViewPostPicture"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUsername"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/post_image"
        tools:srcCompat="@tools:sample/avatars" />
    <ImageView
        android:id="@+id/imageViewLike"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/imageViewPostPicture"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ufi_heart"
        android:contentDescription="@string/dummy_like"/>
    <ImageView
        android:id="@+id/imageViewComment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/imageViewPostPicture"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageViewLike"
        app:srcCompat="@drawable/ufi_comment"
        android:contentDescription="@string/dummy_comment"/>
    <ImageView
        android:id="@+id/imageViewDirect"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/imageViewPostPicture"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageViewComment"
        app:srcCompat="@drawable/ufi_new_direct"
        android:contentDescription="@string/dummy_direct" />
    <TextView
        android:id="@+id/textViewUsername2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewPostPicture"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:text="mervyn" />
    <TextView
        android:id="@+id/textViewPostDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewPostPicture"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/textViewUsername2"
        android:textColor="#000000"
        tools:text="this is a picture of my friend" />
    <TextView
        android:id="@+id/textViewCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/textViewUsername2"
        tools:text="2 days ago" />
</RelativeLayout>